changing toList() to Collectors.toList() in order to be compatile with java 8